# apps/api/src/modules/products/dto/update-product.dto.ts
@@ -1,4 +1,6 @@
-import { PartialType } from '@nestjs/mapped-types';
-import { CreateProductDto } from './create-product.dto';
+import { createZodDto } from 'nestjs-zod';
+import { ProductSchema } from '@repo/types';
 
-export class UpdateProductDto extends PartialType(CreateProductDto) {}
+export class UpdateProductDto extends createZodDto(
+  ProductSchema.omit({ id: true, created_at: true, is_active: true }).partial()
+) {}
